--- a/.lando.yml
+++ b/.lando.yml
@@ -6,6 +6,24 @@ config:
   id: 5c6715db-abac-4633-ada8-1c9efe354629
 framework: drupal8
 xdebug: true
+services:
+  appserver:
+    xdebug: true
+    config:
+      conf: xdebug.ini
+    build:
+      - mkdir -p ~/.terminus/plugins
+      - composer create-project -n -d ~/.terminus/plugins pantheon-systems/terminus-composer-plugin:~1
+      - composer create-project -n -d $HOME/.terminus/plugins pantheon-systems/terminus-drupal-console-plugin:~1
+      - composer create-project -n -d ~/.terminus/plugins pantheon-systems/terminus-build-tools-plugin:~1
+  node:
+    type: node:8
+    build:
+      - "cd $LANDO_MOUNT && npm install"
+      - "cd $LANDO_MOUNT && npm install gulp-cli -g"
+      - "cd $LANDO_MOUNT && npm install gulp -D"
+    globals:
+      gulp-cli: "latest"
 drush: composer
 tooling:
   drush:
