--- a/composer.json
+++ b/composer.json
@@ -73,6 +73,7 @@
         "drupal/kint": "^1.2",
         "drupal/masquerade": "2.0.0-beta2",
         "drupal/search_kint": "^1.0",
+        "drupal/toolbar_visibility": "^1.2",
         "jcalderonzumba/gastonjs": "~1.0.2",
         "jcalderonzumba/mink-phantomjs-driver": "~0.3.1",
         "mikey179/vfsstream": "~1.2",
