--- a/web/sites/default/config/chosen.settings.yml
+++ b/web/sites/default/config/chosen.settings.yml
@@ -2,7 +2,7 @@ minimum_single: 0
 minimum_multiple: 0
 disable_search_threshold: 0
 minimum_width: 0
-jquery_selector: 'select#edit-field-topics, select#edit-field-audience, select#edit-field-community-actions'
+jquery_selector: 'select:visible'
 search_contains: false
 disable_search: true
 allow_single_deselect: false
@@ -13,8 +13,8 @@ disabled_themes:
   seven: '0'
   adminimal_theme: '0'
   bootstrap: '0'
-  bootstrap_barrio: '0'
-  stormy: '0'
-chosen_include: 0
+  particle: '0'
+  portlandor: '0'
+chosen_include: 2
 _core:
   default_config_hash: JUHKHJeHl1bWXY41HMIcDR-VmAWvJ4OJycDubCkIeDU
