--- a/web/sites/default/config/core.entity_form_display.paragraph.email_button.default.yml
+++ b/web/sites/default/config/core.entity_form_display.paragraph.email_button.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.paragraph.email_button.field_email_link
     - field.field.paragraph.email_button.field_email_text
     - paragraphs.paragraphs_type.email_button
 id: paragraph.email_button.default
@@ -10,6 +11,14 @@ targetEntityType: paragraph
 bundle: email_button
 mode: default
 content:
+  field_email_link:
+    weight: 2
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: email_default
+    region: content
   field_email_text:
     weight: 1
     settings:
