--- a/web/sites/default/config/core.entity_form_display.paragraph.form_app_button.default.yml
+++ b/web/sites/default/config/core.entity_form_display.paragraph.form_app_button.default.yml
@@ -6,7 +6,7 @@ dependencies:
     - field.field.paragraph.form_app_button.field_form_button
     - paragraphs.paragraphs_type.form_app_button
   module:
-    - link_class
+    - link
 id: paragraph.form_app_button.default
 targetEntityType: paragraph
 bundle: form_app_button
@@ -17,11 +17,8 @@ content:
     settings:
       placeholder_url: ''
       placeholder_title: ''
-      link_class_mode: select_class
-      link_class_force: ''
-      link_class_select: "btn btn-secondary btn--form|Form button\r\nbtn btn-secondary btn--download|Download button"
     third_party_settings: {  }
-    type: link_class_field_widget
+    type: link_default
     region: content
 hidden:
   created: true
