--- a/web/sites/default/config/views.view.audiences_homepage.yml
+++ b/web/sites/default/config/views.view.audiences_homepage.yml
@@ -1,16 +1,16 @@
-uuid: 23535452-9ce0-46aa-8782-53d75d802c52
+uuid: d958ddfa-f4ba-4cae-a3d9-d5181ae4d1b7
 langcode: en
 status: true
 dependencies:
   config:
-    - taxonomy.vocabulary.topics
+    - taxonomy.vocabulary.audience
   module:
     - taxonomy
     - user
-id: topics
-label: Topics
+id: audiences_homepage
+label: Audiences
 module: views
-description: 'Homepage menu of topics a community member might use to find content within the city.'
+description: 'Homepage menu of actions a community member might take in interacting with the city.'
 tag: ''
 base_table: taxonomy_term_field_data
 base_field: tid
@@ -56,13 +56,13 @@ display:
         type: grid
         options:
           grouping: {  }
-          columns: 3
-          automatic_width: false
+          columns: 4
+          automatic_width: true
           alignment: horizontal
           col_class_default: false
-          col_class_custom: 'card align-items-center d-flex justify-content-center'
+          col_class_custom: 'card align-items-center justify-content-center flex-fill'
           row_class_default: false
-          row_class_custom: 'card-group text-center'
+          row_class_custom: 'card-group text-center align-middle d-flex'
       row:
         type: fields
         options:
@@ -114,7 +114,7 @@ display:
           element_label_colon: false
           element_wrapper_type: ''
           element_wrapper_class: ''
-          element_default_classes: false
+          element_default_classes: true
           empty: ''
           hide_empty: false
           empty_zero: false
@@ -135,7 +135,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: '<a href="{{ view_taxonomy_term }}" class="card-title p-3 m-0"><h3>{{ name }}</h3></a>'
+            text: '<a href="{{ view_taxonomy_term }}" class="card-title p-4 m-0"><h3>{{ name }}</h3></a>'
             make_link: false
             path: ''
             absolute: false
@@ -195,23 +195,12 @@ display:
           id: vid
           table: taxonomy_term_field_data
           field: vid
-          value:
-            topics: topics
-          entity_type: taxonomy_term
-          entity_field: vid
-          plugin_id: bundle
-        tid_raw:
-          id: tid_raw
-          table: taxonomy_term_field_data
-          field: tid_raw
-          relationship: parent
+          relationship: none
           group_type: group
           admin_label: ''
-          operator: empty
+          operator: in
           value:
-            min: ''
-            max: ''
-            value: ''
+            audience: audience
           group: 1
           exposed: false
           expose:
@@ -226,9 +215,8 @@ display:
             multiple: false
             remember_roles:
               authenticated: authenticated
-            placeholder: ''
-            min_placeholder: ''
-            max_placeholder: ''
+            reduce: false
+            argument: null
           is_grouped: false
           group_info:
             label: ''
@@ -242,7 +230,8 @@ display:
             default_group_multiple: {  }
             group_items: {  }
           entity_type: taxonomy_term
-          plugin_id: numeric
+          entity_field: vid
+          plugin_id: bundle
       sorts:
         weight:
           id: weight
@@ -258,20 +247,11 @@ display:
           entity_type: taxonomy_term
           entity_field: weight
           plugin_id: standard
-      title: Topics
+      title: Audiences
       header: {  }
       footer: {  }
       empty: {  }
-      relationships:
-        parent:
-          id: parent
-          table: taxonomy_term_hierarchy
-          field: parent
-          relationship: none
-          group_type: group
-          admin_label: Parent
-          required: false
-          plugin_id: standard
+      relationships: {  }
       arguments: {  }
       display_extenders: {  }
     cache_metadata:
@@ -291,6 +271,7 @@ display:
       block_category: 'Lists (Views)'
       allow:
         items_per_page: false
+      block_description: 'Homepage audiences'
     cache_metadata:
       max-age: -1
       contexts:
