--- a/web/sites/default/config/views.view.group_content_menu.yml
+++ b/web/sites/default/config/views.view.group_content_menu.yml
@@ -1,20 +1,24 @@
-uuid: b992b6b4-386a-4e0e-80b2-1181b2645d0f
+uuid: b428daa0-6bd8-4261-872c-accb9a5f212d
 langcode: en
 status: true
 dependencies:
   config:
     - field.storage.group.field_shortname_or_acronym
+    - node.type.city_service
+    - node.type.guide
+    - node.type.news
   module:
     - group
     - node
     - portland
+    - user
 id: group_content_menu
 label: 'Group content menu'
 module: views
 description: ''
 tag: ''
-base_table: group_content_field_data
-base_field: id
+base_table: node_field_data
+base_field: nid
 core: 8.x
 display:
   default:
@@ -24,8 +28,9 @@ display:
     position: 0
     display_options:
       access:
-        type: none
-        options: {  }
+        type: perm
+        options:
+          perm: 'access content'
       cache:
         type: tag
         options: {  }
@@ -48,16 +53,16 @@ display:
           sort_asc_label: Asc
           sort_desc_label: Desc
       pager:
-        type: some
+        type: none
         options:
-          items_per_page: 10
+          items_per_page: null
           offset: 0
       style:
         type: default
         options:
           grouping:
             -
-              field: label_1
+              field: label
               rendered: true
               rendered_strip: false
           row_class: ''
@@ -65,142 +70,6 @@ display:
       row:
         type: fields
       fields:
-        label_1:
-          id: label_1
-          table: groups_field_data
-          field: label
-          relationship: gid
-          group_type: group
-          admin_label: 'Group title'
-          label: ''
-          exclude: true
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: false
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: value
-          type: string
-          settings:
-            link_to_entity: true
-          group_column: value
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
-          entity_type: group
-          entity_field: label
-          plugin_id: field
-        nid:
-          id: nid
-          table: node_field_data
-          field: nid
-          relationship: gc__node
-          group_type: count_distinct
-          admin_label: ''
-          label: ''
-          exclude: true
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: false
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          set_precision: false
-          precision: 0
-          decimal: .
-          separator: ', '
-          format_plural: 0
-          format_plural_string: !!binary MQNAY291bnQ=
-          prefix: ''
-          suffix: ''
-          click_sort_column: value
-          type: number_integer
-          settings: {  }
-          group_column: value
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          field_api_classes: false
-          entity_type: node
-          entity_field: nid
-          plugin_id: field
         field_shortname_or_acronym:
           id: field_shortname_or_acronym
           table: group__field_shortname_or_acronym
@@ -264,18 +133,89 @@ display:
           separator: ', '
           field_api_classes: false
           plugin_id: field
+        id:
+          id: id
+          table: group_content_field_data
+          field: id
+          relationship: group_content_id
+          group_type: count_distinct
+          admin_label: ''
+          label: ''
+          exclude: true
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          set_precision: false
+          precision: 0
+          decimal: .
+          separator: ', '
+          format_plural: 0
+          format_plural_string: !!binary MQNAY291bnQ=
+          prefix: ''
+          suffix: ''
+          click_sort_column: value
+          type: number_integer
+          settings: {  }
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          field_api_classes: false
+          entity_type: group_content
+          entity_field: id
+          plugin_id: field
         type:
           id: type
           table: node_field_data
           field: type
-          relationship: gc__node
+          relationship: none
           group_type: group
           admin_label: ''
           label: ''
           exclude: false
           alter:
             alter_text: true
-            text: '<a href="/{{ field_shortname_or_acronym|lower }}/{{ type|lower }}" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">{{ type }}<span class="badge badge-primary badge-pill">{{ nid }}</span></a>'
+            text: '<a href="/{{ field_shortname_or_acronym|lower }}/{{ type|lower }}" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">{{ type }}<span class="badge badge-primary badge-pill">{{ id }}</span></a>'
             make_link: false
             path: ''
             absolute: false
@@ -328,20 +268,156 @@ display:
           entity_type: node
           entity_field: type
           plugin_id: field
-      filters: {  }
+        label:
+          id: label
+          table: groups_field_data
+          field: label
+          relationship: gid
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: true
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: string
+          settings:
+            link_to_entity: true
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          entity_type: group
+          entity_field: label
+          plugin_id: field
+      filters:
+        status:
+          value: '1'
+          table: node_field_data
+          field: status
+          plugin_id: boolean
+          entity_type: node
+          entity_field: status
+          id: status
+          expose:
+            operator: ''
+          group: 1
+        type:
+          id: type
+          table: node_field_data
+          field: type
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: in
+          value:
+            guide: guide
+            news: news
+            city_service: city_service
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            reduce: false
+            argument: null
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          entity_type: node
+          entity_field: type
+          plugin_id: bundle
       sorts: {  }
       title: ''
       header: {  }
       footer: {  }
       empty: {  }
       relationships:
+        group_content:
+          id: group_content
+          table: node_field_data
+          field: group_content
+          relationship: none
+          group_type: group
+          admin_label: 'Content group content'
+          required: true
+          group_content_plugins:
+            'group_node:city_service': 'group_node:city_service'
+            'group_node:guide': 'group_node:guide'
+            'group_node:news': 'group_node:news'
+            'group_node:building': '0'
+            'group_node:information': '0'
+            'group_node:service_location': '0'
+          entity_type: node
+          plugin_id: group_content_to_entity_reverse
         gid:
           id: gid
           table: group_content_field_data
           field: gid
-          relationship: none
+          relationship: group_content
           group_type: group
-          admin_label: 'Parent group'
+          admin_label: Group
           required: true
           entity_type: group_content
           entity_field: gid
@@ -352,8 +428,8 @@ display:
           field: group_content_id
           relationship: gid
           group_type: group
-          admin_label: 'Parent group content'
-          required: false
+          admin_label: 'All content in the parent group'
+          required: true
           group_content_plugins:
             'group_node:city_service': 'group_node:city_service'
             'group_node:guide': 'group_node:guide'
@@ -364,28 +440,11 @@ display:
             group_membership: '0'
           entity_type: group
           plugin_id: group_to_group_content
-        gc__node:
-          id: gc__node
-          table: group_content_field_data
-          field: gc__node
-          relationship: group_content_id
-          group_type: group
-          admin_label: 'Parent group content entities'
-          required: false
-          group_content_plugins:
-            'group_node:city_service': 'group_node:city_service'
-            'group_node:guide': 'group_node:guide'
-            'group_node:news': 'group_node:news'
-            'group_node:building': '0'
-            'group_node:information': '0'
-            'group_node:service_location': '0'
-          entity_type: group_content
-          plugin_id: group_content_to_entity
       arguments:
-        id:
-          id: id
-          table: group_content_field_data
-          field: id
+        nid:
+          id: nid
+          table: node_field_data
+          field: nid
           relationship: none
           group_type: group
           admin_label: ''
@@ -396,10 +455,8 @@ display:
             title: All
           title_enable: false
           title: ''
-          default_argument_type: raw
-          default_argument_options:
-            index: 1
-            use_alias: false
+          default_argument_type: node
+          default_argument_options: {  }
           default_argument_skip_url: false
           summary_options:
             base_path: ''
@@ -417,9 +474,9 @@ display:
           validate_options: {  }
           break_phrase: false
           not: false
-          entity_type: group_content
-          entity_field: id
-          plugin_id: numeric
+          entity_type: node
+          entity_field: nid
+          plugin_id: node_nid
       display_extenders: {  }
       group_by: true
     cache_metadata:
@@ -428,6 +485,8 @@ display:
         - 'languages:language_content'
         - 'languages:language_interface'
         - url
+        - 'user.node_grants:view'
+        - user.permissions
       tags:
         - 'config:field.storage.group.field_shortname_or_acronym'
   block_1:
@@ -437,11 +496,14 @@ display:
     position: 1
     display_options:
       display_extenders: {  }
+      block_hide_empty: true
     cache_metadata:
       max-age: -1
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
         - url
+        - 'user.node_grants:view'
+        - user.permissions
       tags:
         - 'config:field.storage.group.field_shortname_or_acronym'
