POWR-122 added legacy_paths field to  content types.

--- a/web/sites/default/config/core.entity_form_display.node.building.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.building.default.yml
@@ -4,11 +4,11 @@ status: true
 dependencies:
   config:
     - field.field.node.building.field_address
+    - field.field.node.building.field_legacy_path
     - node.type.building
   module:
     - address
     - content_moderation
-    - datetime
     - path
 id: node.building.default
 targetEntityType: node
@@ -27,6 +27,14 @@ content:
       default_country: null
     third_party_settings: {  }
     type: address_default
+    region: content
+  field_legacy_path:
+    weight: 51
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
     region: content
   moderation_state:
     type: moderation_state_default
@@ -84,4 +92,7 @@ content:
       placeholder: ''
     region: content
     third_party_settings: {  }
+  url_redirects:
+    weight: 50
+    region: content
 hidden: {  }
