--- a/web/sites/default/config/core.entity_form_display.node.guide.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.guide.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.guide.field_body
+    - field.field.node.guide.field_legacy_path
     - field.field.node.guide.field_related_content
     - field.field.node.guide.field_summary_and_lead_paragraph
     - field.field.node.guide.field_topics
@@ -41,6 +42,14 @@ content:
         add_above: add_above
     third_party_settings: {  }
     type: paragraphs
+    region: content
+  field_legacy_path:
+    weight: 26
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
     region: content
   field_related_content:
     weight: 4
