--- a/web/sites/default/config/core.entity_form_display.node.news.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.news.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.news.field_body
+    - field.field.node.news.field_legacy_path
     - field.field.node.news.field_summary_and_lead_paragraph
     - field.field.node.news.field_topics
     - node.type.news
@@ -40,6 +41,14 @@ content:
         add_above: add_above
     third_party_settings: {  }
     type: paragraphs
+    region: content
+  field_legacy_path:
+    weight: 26
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
     region: content
   field_summary_and_lead_paragraph:
     weight: 1
