--- a/web/sites/default/config/core.entity_form_display.node.service_location.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.service_location.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.node.service_location.field_building
     - field.field.node.service_location.field_floor
     - field.field.node.service_location.field_get_directions
+    - field.field.node.service_location.field_legacy_path
     - field.field.node.service_location.field_open_hours
     - node.type.service_location
   module:
@@ -40,6 +41,14 @@ content:
     third_party_settings: {  }
     type: link_default
     region: content
+  field_legacy_path:
+    weight: 51
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
   field_open_hours:
     weight: 3
     settings:
@@ -56,6 +65,9 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+  url_redirects:
+    weight: 50
+    region: content
 hidden:
   created: true
   moderation_state: true
