--- a/web/sites/default/config/core.entity_view_display.node.city_service.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.city_service.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.city_service.field_audience
     - field.field.node.city_service.field_community_actions
+    - field.field.node.city_service.field_legacy_path
     - field.field.node.city_service.field_related_content
     - field.field.node.city_service.field_service_mode
     - field.field.node.city_service.field_summary
@@ -59,6 +60,7 @@ content:
 hidden:
   field_audience: true
   field_community_actions: true
+  field_legacy_path: true
   field_related_content: true
   field_topics: true
   links: true
