--- a/web/sites/default/config/core.entity_view_display.node.guide.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.guide.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.guide.field_body
+    - field.field.node.guide.field_legacy_path
     - field.field.node.guide.field_related_content
     - field.field.node.guide.field_summary_and_lead_paragraph
     - field.field.node.guide.field_topics
@@ -46,6 +47,7 @@ content:
     type: string
     region: content
 hidden:
+  field_legacy_path: true
   field_related_content: true
   field_topics: true
   links: true
