--- a/web/sites/default/config/core.entity_view_display.node.building.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.building.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.building.field_address
+    - field.field.node.building.field_legacy_path
     - node.type.building
   module:
     - address
@@ -29,5 +30,6 @@ content:
     region: content
 hidden:
   content_moderation_control: true
+  field_legacy_path: true
   links: true
   scheduled_publication: true
