--- a/web/sites/default/config/core.entity_view_display.node.news.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.news.field_body
+    - field.field.node.news.field_legacy_path
     - field.field.node.news.field_summary_and_lead_paragraph
     - field.field.node.news.field_topics
     - node.type.news
@@ -53,4 +54,5 @@ content:
     type: entity_reference_label
     region: content
 hidden:
+  field_legacy_path: true
   links: true
