--- a/web/sites/default/config/core.entity_view_display.node.service_location.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.service_location.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.node.service_location.field_building
     - field.field.node.service_location.field_floor
     - field.field.node.service_location.field_get_directions
+    - field.field.node.service_location.field_legacy_path
     - field.field.node.service_location.field_open_hours
     - node.type.service_location
   module:
@@ -62,5 +63,6 @@ content:
     region: content
 hidden:
   content_moderation_control: true
+  field_legacy_path: true
   links: true
   scheduled_publication: true
