--- a/web/sites/default/config/field.field.node.city_service.field_legacy_path.yml
+++ b/web/sites/default/config/field.field.node.city_service.field_legacy_path.yml
@@ -1,24 +1,24 @@
-uuid: f170fc7a-c53a-47c8-8588-d59737bad775
+uuid: a65b4289-f651-486e-b299-7be8ad659800
 langcode: en
 status: true
 dependencies:
   config:
     - field.storage.node.field_legacy_path
-    - node.type.information
+    - node.type.city_service
   module:
     - custom_add_another
 third_party_settings:
   custom_add_another:
-    custom_add_another: 'Add another path'
-    custom_remove: 'Remove this path'
-id: node.information.field_legacy_path
+    custom_add_another: ''
+    custom_remove: ''
+id: node.city_service.field_legacy_path
 field_name: field_legacy_path
 entity_type: node
-bundle: information
+bundle: city_service
 label: 'Legacy path'
 description: 'This field is used to create redirects to this page from legacy pages in the old site. Multiple paths may be entered in case several pages have been combined during migration. Once these paths are created, they may only be modified or removed by an administrator. Paths must be relative and start with a slash. For example, the page "https://www.portlandoregon.gov/bts/39479" should be entered as "/bts/39479."'
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings: {  }
